fix: improve documentation of a solution  On branch master  Changes to be committed: 	modified:   Components/CO01/CHALLENGE.md 	new file:   Components/CO01/israel-laguan/CO01.png 	modified:   Components/CO01/israel-laguan/index.html

--- a/Components/CO01/israel-laguan/index.html
+++ b/Components/CO01/israel-laguan/index.html
@@ -21,7 +21,7 @@
         color: #fefefe;
         padding: 0 0.3em;
         top: -1em;
-        left: auto;
+        left: -0.5em;
         position: relative;
       }
 
